# personal-assistant

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  CLAUDE.MD  DELIVERY_SUMMARY.md  INTELLIGENCE_MODULE_CHECKLIST.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TAB_COMPLETION_README.md  TIMELINE_4DAYS.md  main.py  pyproject.toml  requirements.txt
.github/: GITHUB_ACTIONS_SETUP.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  AUTOCOMPLETE_GUIDE.md  CLI_MODULE.md  CONTACTS_MODULE.md  COPILOT_GUIDE.md  FILE_STORAGE_USAGE.md  IMPLEMENTATION_GUIDE.md  INTELLIGENCE_MODULE.md  NOTES_MODULE.md  STORAGE_MODULE.md  UV_GUIDE.md  VALIDATION_MODULE.md
examples/: demo_storage.py  demo_tab_completion.py  test_autocomplete.py
src/personal_assistant/: __init__.py  exceptions.py  main.py
src/personal_assistant/cli/: __init__.py  command_parser.py  intent_recognizer.py  interface.py  smart_command_parser.py
src/personal_assistant/models/: __init__.py  contact.py  note.py
src/personal_assistant/services/: __init__.py  contact_service.py  note_service.py
src/personal_assistant/storage/: __init__.py  file_storage.py
src/personal_assistant/utils/: __init__.py  note_helpers.py
src/personal_assistant/validators/: __init__.py  validators.py
tests/: test_cli_integration.py  test_command_parser.py  test_contact_service.py  test_contacts.py  test_intent_recognizer.py  test_interface.py  test_note_helpers.py  test_note_service.py  test_notes.py  test_smart_command_parser.py  test_storage.py  test_validation.py
