[project]
name = "personal-assistant"
version = "1.0.0"
description = "A CLI tool for managing contacts and notes with intelligent command parsing"
authors = [
    {name = "Your Team Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

keywords = ["cli", "contacts", "notes", "assistant", "productivity"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dateutil>=2.8.2",
    "colorama>=0.4.6",
    "pyreadline3>=3.5.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
colors = [
    "colorama>=0.4.6",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "pylint>=2.17.0",
    "mypy>=1.4.0",
    "flake8>=6.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
personal-assistant = "personal_assistant.main:main"
pa = "personal_assistant.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/personal-assistant"
Documentation = "https://github.com/yourusername/personal-assistant/docs"
Repository = "https://github.com/yourusername/personal-assistant"
Issues = "https://github.com/yourusername/personal-assistant/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["src/personal_assistant"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/personal_assistant --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
